rnsc/test_data/rns_integration/error/parser/inner_directive/type_hint_as_name.rns
; Tests that a type hint used as inner class name is handled.
; Expected: warning about reserved-like identifier

.class public MyClass
.super java/lang/Object

.inner @utf8
    .super java/lang/Object
.inner_end

.class_end
